using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    public static string IsMoving => "isMoving";
    public static string IsRunning => "isRunning";
    public static string IsGrounded=> "isGrounded";
    public static string IsOnWall=> "isOnWall";
    public static string IsOnCeiling=> "isOnCeiling";
    public static string Jump => "Jump";
    public static string yVelocity => "yVelocity";
    public static string Attack => "Attack";
    public static string CanMove => "CanMove";
    public static string HasTarget => "HasTarget";
    public static string AttackCoolDown => "AttackCoolDown";
    public static string IsAlive=> "IsAlive";
    public static string Hit=> "Hit";
    public static string LockVelocity=> "LockVelocity";
    public static string Shoot=> "Shoot";

}
